--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "backtick-template": "^0.2.0",
     "next": "^7.0.0",
-    "react-make-t": "file:../..",
+    "react-make-t": "^1.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
